# leetcode

./: .gitignore  ReadMe.md
C/: .gitignore  1-Two-Sum.c  2-Add-Two_Numbers.c  233-Number-of-Digit-One.c  328-Odd-Even-Linked-List.c  CMakeLists.txt  main.c  main.h
C/1-50/: 1-Two-Sum.c  10-Regular-Expression-Matching.c  11.-Container-With-Most-Water.c  13-Roman-to-Integer.c  14-Longest-Common-Prefix.c  15-3Sum.c  17-Letter-Combinations-of-a-Phone-Number.c  18-4Sum.c  19-Remove-Nth-Node-From-End-of-List.c  2-Add-Two_Numbers.c  20-Valid-Parentheses.c  21-Merge-Two-Sorted-Lists.c  22-Generate-Parentheses.c  23-Merge-k-Sorted-Lists.c  26-Remove-Duplicates-from-Sorted-Array.c  28-Implement-strStr().c  29-Divide-Two-Integers.c  3-Longest-Substring-Without-Repeating-Characters.c  32-Longest-Valid-Parentheses.c  33-Search-in-Rotated-Sorted-Array.c  34-Search-for-a-Range.c  36-Valid-Sudoku.c  38-Count-and-Say.c  4-Median-of-Two-Sorted-Arrays.c  41-First-Missing-Positive.c  42-Trapping-Rain-Water.c  44-Wildcard-Matching.c  46-Permutations.c  48-Rotate-Image.c  49-Group Anagrams.c  5.-Longest-Palindromic-Substring.c  50-Pow(x, n).c  6-ZigZag-Conversion.c  7-Reverse-Integer.c  8-String-to-Integer-atoi.c  9-Palindrome-Number.c
C/151-200/: 172.-Factorial-Trailing-Zeroes.c
C/201-250/: 224-Basic-Calculator .c  233-Number-of-Digit-One.c
C/301-350/: 328-Odd-Even-Linked-List.c
C/51-100/: 53-Maximum-Subarray.c  54-Spiral-Matrix.c  55-Jump-Game.c  56-Merge-Intervals.c  62-Unique-Paths.c  66-Plus-One.c  69-Sqrt(x).c  70-Climbing-Stairs.c  73-Set-Matrix-Zeroes.c  75-Sort-Colors.c
(+54 files in other folders)
